--- a/ApiLogAcessos/Web.config
+++ b/ApiLogAcessos/Web.config
@@ -11,6 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="01" value="1RS1Z5gR7Yp1rR67Pf7SIGULW4rmj47u" />
     <add key="02" value="ApiLogAcessos" />
+    <add key="03" value="d3g6DD8nF/w=" />
+    <add key="04" value="Er5Rr45/+dg=" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
