--- a/WEBAplication/Web.config
+++ b/WEBAplication/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="01" value="D:\PMJ\TEste VagaV2\ApiLogAcessos\WEBAplication\Source\" />
+    <add key="02" value="https://localhost:44375/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
